modules on the class path